# slateprotocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCORD_SETUP.md  GOVERNANCE.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  VERCEL_DEPLOYMENT.md  WHITEPAPER.md  setup.sh  whitepaper.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
slate-whitepaper/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
slate-whitepaper/src/app/: globals.css  layout.tsx  page.tsx
slate-whitepaper/src/components/: Advantage.tsx  Architecture.tsx  Comparison.tsx  DeveloperExperience.tsx  Footer.tsx  GetInvolved.tsx  Header.tsx  Hero.tsx  LiveStats.tsx  Roadmap.tsx  Security.tsx  SlateBus.tsx  Tokenomics.tsx  WhitepaperSection.tsx
slate-whitepaper/src/lib/: constants.ts  utils.ts
src/: lib.rs
src/protocol/: mod.rs
